# cloudMLPublic

./: .gitignore  .pre-commit-config.yaml  AGENTBIBLE_EFFECTIVENESS_LOG.md  Agent Scope of Work: A Research Program.md  CHANGELOG.md  CHANGES_2024_10_19.md  CHANGES_SUMMARY.md  CLEANUP_SUMMARY.md  COLAB_SETUP.md  CloudML-Future-Work.md  DEEP_LEARNING_PROPOSAL.md  DIAGNOSTIC_PLAN.md  FINAL_DIAGNOSTIC_REPORT.md  FINAL_SPRINT_CHANGELOG.md  FINAL_STATUS.md  GPU_OPTIMIZATION.md  LICENSE  NEXT_STEPS.md  OPTIMIZATION_GUIDE.md  OVERNIGHT_WP4_SUMMARY.md  PAPER_CHECKLIST.md  PHASE1_EXTRACTION_GUIDE.md  PHASE1_FIXES_APPLIED.md  PHASE1_READY.md  PHASE1_SUMMARY.md  PHASE2_PRETRAIN_GUIDE.md  PHASE2_READY.md  PHASE3_FINETUNE_GUIDE.md  PHASE3_READY.md  POST_BASELINE_ACTION_LIST.md  PROJECT_STATUS.md  QUICKSTART_PHASE1.md  QUICK_START_DIAGNOSTICS.md  README.md  README_FIRST.md  RESULTS_SHARING_GUIDE.md  REVIEW_RESULTS_GUIDE.md  RUN5_FIXES.md  RUN_STATUS.md  SECTION2_EXECUTION_GUIDE.md  (+26 more)
.github/workflows/: ci.yml
archive/: README.md
archive/configs/: diagnostic_exp_a_simple.yaml  phase_1_variance_fix.yaml  phase_2_simple_cnn.yaml  section2_lambda_5.0.yaml  ssl_extract.yaml
archive/experiments/: pretrain_mae.py  train_spatial_mae.py  validate_hybrid_loo.py
archive/legacy_models/: README.md  pytorchmodel.py
archive/legacy_training/: README.md  pretraining.py
archive/sprint6_analysis/: analyze_ensemble_results.py  (+4 more)
configs/: Technical Analysis and Scope of Work Rec.md  ablation_angles_both.yaml  ablation_angles_sza_only.yaml  ablation_arch_gnn.yaml  ablation_attention_off.yaml  ablation_attention_on.yaml  ablation_augment_off.yaml  ablation_loss_mae.yaml  bestComboConfig.yaml  colab_full_stable.yaml  colab_optimized.yaml  colab_optimized_full.yaml  colab_optimized_full_tuned.yaml  config.yaml  data_expansion_max.yaml  data_expansion_phase1.yaml  data_expansion_phase2.yaml  data_pipeline_baseline.yaml  diagnostic_exp_c_overfit.yaml  local_diagnostic.yaml  paper2_simclr.yaml  phase_1_variance_fix.yaml  section2_baseline_collapse.yaml  section2_lambda_0.5.yaml  section2_lambda_1.0.yaml  section2_lambda_10.0.yaml  section2_lambda_2.0.yaml  ssl_finetune_cbh.yaml  ssl_pretrain_mae.yaml  vision_baselines_config.yaml
diagnostics/: 1_correlation_analysis.py  2_simple_baselines.py  README.md
docs/: ACTIONABLE_PLAN.md  COLAB_OOM_TROUBLESHOOTING.md  CPL_DOCUMENTATION.md  CUDA_GRAPH_FIX.md  ERA5_PROCESSING_COMPLETE.md  FIRST_RUN_ANALYSIS_AND_TUNING.md  LITERATURE_INSIGHTS.md  NOTEBOOK_UPDATE_SUMMARY.md  ONE_PAGE_SUMMARY.md  PLOTTING_AND_SAVE_PATH_FIX.md  SAFETY_VERIFICATION.md  SPRINT_5_SCOPE_FEATURES.md  SSL_PIPELINE_SUMMARY.md  ScopeWorkSprint3.md  Sprint6-SOW-Agent.md  TENSORBOARD_SETUP.md  TIER1_IMPLEMENTATION_COMPLETE.md  TIER1_TRAINING_GUIDE.md  TORCH_COMPILE_STATE_DICT_FIX.md  WP4_ROOT_CAUSE_ANALYSIS.md  audit_reconciliation_report.md  cloudTop.txt  compile_report.sh  nonlinear.txt  preprint_verification_results.json  project_status_report.tex  sounder.txt  sprint5agentdoc.md  sprint_3_4_status_report.out  sprint_3_4_status_report.tex  sprint_3_4_status_report.toc
preprint/: README.md  cloudml_academic_preprint.out  cloudml_academic_preprint.tex  cloudml_academic_preprint_BACKUP.tex  cloudml_academic_preprint_jan7.tex  paper1_nasa_er2_cbh.tex  paper2_era5_domain_shift.tex  pending_citations.txt  sprint6_cbh_preprint.out  sprint6_cbh_preprint.tex  sprint6_cbh_preprint.toc
scripts/: README_data_pipeline.md  ablation_studies.py  aggregate_results.py  aggregate_section2_results.py  analyze_feature_importance.py  analyze_results.py  check_angle_scaling.py  check_test_set.py  compare_runs.py  compare_splits.py  create_clean_dataset.py  create_integrated_features.py  extract_all_images.py  feature_engineering.py  finetune_cbh.py  generate_figures.py  hybrid_mae_gbdt.py  integrate_era5_features.py  paper2_rerun_all.py  paper2_rerun_v2.py  plot_section2_distributions.py  pretrain_mae.py  pretrain_ssl.py  rebuild_verified_dataset.py  regenerate_preprint_figures.py  run_ablation_studies.sh  run_all_diagnostics.sh  run_all_revision_analyses.sh  run_domain_adaptation.py  run_embedding_analysis.sh  run_feature_importance.sh  run_hybrid_mae_gbdt.sh  run_loo_validation.sh  run_phase1.sh  run_phase2_pretrain.sh  run_phase3_finetune.sh  run_results_analysis.sh  run_section2_automated.sh  run_section2_experiments.sh  run_uncertainty_quantification.py  (+14 more)
sow_outputs/: AGENT_COMPLETION_SUMMARY.txt  COMPREHENSIVE_TEST_REPORT.md  EXECUTIVE_SUMMARY.md  FINAL_EXECUTION_REPORT.md  INDEX.md  QUICK_REFERENCE.md  QUICK_REFERENCE.txt  QUICK_START_ERA5.txt  README.md  RESULTS_FOR_RYLAN.md  SETUP_COMPLETE.md  SOW_COMPLETION_REPORT.md  SOW_IMPLEMENTATION_GUIDE.md  SOW_Validation_Summary.json  SPRINT_3_4_COMPLETION_SUMMARY.md  START_HERE.txt  START_HERE_TEST_RESULTS.md  TEST_RESULTS.json  TEST_RESULTS_SUMMARY.md  TEST_RESULTS_VISUAL.txt  WORK_COMPLETED_SUMMARY.md  WP2_COMPLETE.md  WP2_ERA5_SETUP.md  WP4_STATUS_UPDATE.md  create_integrated_features.py  create_validation_summary.py  current_results.txt  diagnose_wp1.py  monitor_kfold.py  process_real_era5.py  quick_kfold_test.py  run_sow.sh  run_wp2_real_era5.sh  wp1_geometric_features.py  wp2_atmospheric_features.py  wp2_era5_real.py  wp3_era5_only.py  wp3_kfold.py  wp3_physical_baseline.py  wp4_ablation_study.py  (+5 more)
sprint4_execution/: FINDINGS_SUMMARY.md  IMPUTATION_BUG_EVIDENCE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SETUP_AND_RUN.md  SPRINT4_KICKOFF.md  action_plan.md  diagnose_wp3_results.py  explain_r2_paradox.py  gap_analysis.md  inspect_data.py  investigate_imputation_bug.py  requirements.txt  shadow_failure_analysis.py  validate_era5_constraints.py
src/: caching.py  cbh_validators.py  cplCompareSub.py  data_preprocessing.py  ensemble.py  evaluate_model.py  hdf5_dataset.py  mae_model.py  main_utils.py  pipeline.py  plot_saved_results.py  pretraining.py  pytorchmodel.py  scene_complexity.py  split_utils.py  ssl_dataset.py  train_model.py  unlabeled_dataset.py  visualization.py
tests/: test_reorganization.py
trainingrun/: compare_runs.py
(+186 files in other folders)
