[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudml-cbh"
version = "1.0.0"
description = "Cloud Base Height Retrieval System - NASA Sprint 6"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "NASA Open Source Agreement"}
authors = [
    {name = "NASA Cloud ML Team", email = "research@nasa.gov"}
]
keywords = ["cloud", "cbh", "machine-learning", "nasa", "remote-sensing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=2.2.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.0",
    "h5py>=3.14.0",
    "joblib>=1.5.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=5.1.0",
    "pytest-xdist>=3.6.0",
    "ruff>=0.12.0",
    "mypy>=1.17.0",
    "black>=25.1.0",
    "isort>=6.0.0",
    "pylint>=3.3.0",
    "pre-commit>=3.5.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
]
api = [
    "flask>=3.1.0",
    "requests>=2.32.0",
    "prometheus-client>=0.22.0",
]

[project.urls]
Homepage = "https://github.com/nasa/cloudMLPublic"
Documentation = "https://cloudml.readthedocs.io"
Repository = "https://github.com/nasa/cloudMLPublic"
Issues = "https://github.com/nasa/cloudMLPublic/issues"

[tool.setuptools]
packages = ["cloudml", "sow_outputs.sprint6"]

[tool.setuptools.package-data]
cloudml = ["py.typed"]

# ============================================================================
# Ruff Configuration (Fast Python Linter & Formatter)
# ============================================================================
[tool.ruff]
# Target Python 3.10+
target-version = "py310"

# Line length
line-length = 100

# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "D",     # pydocstyle (docstrings)
    "UP",    # pyupgrade
    "ANN",   # flake8-annotations (type hints)
    "ASYNC", # flake8-async
    "S",     # flake8-bandit (security)
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "G",     # flake8-logging-format
    "INP",   # flake8-no-pep420
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SLF",   # flake8-self
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "TCH",   # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate (commented-out code)
    "PL",    # pylint
    "TRY",   # tryceratops
    "NPY",   # NumPy-specific rules
    "RUF",   # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D203",   # 1 blank line required before class docstring (conflicts with D211)
    "D213",   # Multi-line docstring summary should start at the second line (conflicts with D212)
    "ANN101", # Missing type annotation for self in method
    "ANN102", # Missing type annotation for cls in classmethod
    "ANN401", # Dynamically typed expressions (Any) are disallowed
    "S101",   # Use of assert detected (we use assertions for validation)
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
    "TRY003", # Avoid specifying long messages outside the exception class
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Test files can ignore certain rules
"tests/**/*.py" = [
    "D",      # No docstring requirements in tests
    "ANN",    # No type annotation requirements in tests
    "S101",   # Allow assert in tests
    "PLR2004", # Allow magic values in tests
    "ARG",    # Allow unused arguments in fixtures
]
"**/__init__.py" = [
    "D104",   # No docstring requirement for __init__.py
    "F401",   # Allow unused imports in __init__.py (re-exports)
]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings
convention = "google"

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["cloudml", "sow_outputs"]
force-sort-within-sections = true

[tool.ruff.format]
# Formatting configuration
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================================================
# Black Configuration (Python Formatter)
# ============================================================================
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# ============================================================================
# isort Configuration (Import Sorting)
# ============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["cloudml", "sow_outputs"]
known_third_party = ["numpy", "pandas", "torch", "sklearn"]

# ============================================================================
# mypy Configuration (Type Checking)
# ============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for strict mode
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_error_context = true
pretty = true

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "scipy.*",
    "matplotlib.*",
    "seaborn.*",
    "h5py.*",
    "torchvision.*",
]
ignore_missing_imports = true

# ============================================================================
# pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests", "sow_outputs/sprint6/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-ra",
    "--color=yes",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "benchmark: marks tests as benchmarks",
    "requires_gpu: marks tests that require GPU",
    "requires_data: marks tests that require data files",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["cloudml", "sow_outputs/sprint6"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]
branch = true

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# pylint Configuration
# ============================================================================
[tool.pylint.main]
jobs = 0  # Auto-detect number of processors
ignore = ["CVS", ".git", "__pycache__", "venv", ".venv"]
ignore-patterns = ["^\\.#"]
persistent = true
load-plugins = []

[tool.pylint.messages_control]
disable = [
    "C0103",  # Invalid name (handled by ruff)
    "C0114",  # Missing module docstring (handled by ruff)
    "C0115",  # Missing class docstring (handled by ruff)
    "C0116",  # Missing function docstring (handled by ruff)
    "R0903",  # Too few public methods
    "R0913",  # Too many arguments (handled by ruff)
    "W0212",  # Access to protected member (sometimes necessary)
    "W0511",  # TODO/FIXME comments
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 10
max-attributes = 15
max-branches = 15
max-locals = 20
max-returns = 8
max-statements = 60

# ============================================================================
# bandit Configuration (Security Linter)
# ============================================================================
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

# ============================================================================
# vulture Configuration (Dead Code Detection)
# ============================================================================
[tool.vulture]
exclude = ["venv/", ".venv/", "build/"]
min_confidence = 80
sort_by_size = true
